--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Fronend for Recipe App",
   "dependencies": {
+    "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^1.4.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^4.3.0"
+    "vite": "^7.1.9"
   },
   "scripts": {
     "start": "react-scripts start",
